[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Blocks.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ouch.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://assets/8bitOperatorPlus8-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/hit.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/lose.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/victory.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/boop.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69, 209 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 288, 60 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 273, 10 )

[sub_resource type="DynamicFont" id=6]
size = 12
outline_size = 1
outline_color = Color( 0.109804, 0.109804, 0.109804, 1 )
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Arena" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 6.0
margin_right = 505.0
margin_bottom = 289.0
color = Color( 0.529412, 0.529412, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( -64, 146 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls"]
position = Vector2( 574, 146 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 246, -54 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Walls"]
position = Vector2( 246, 353 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 281.351, 274.638 )

[node name="Blocks" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
physics_material_override = SubResource( 3 )

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2( 249, 300 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 255, 149 )
rotating = true
current = true
script = ExtResource( 6 )
zoom_amount = Vector2( 0.1, 0.1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Lives" type="Label" parent="HUD"]
margin_left = 7.0
margin_top = 9.0
margin_right = 61.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 6 )
text = "Lives: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Victory" type="Label" parent="HUD"]
visible = false
margin_left = 204.0
margin_top = 141.0
margin_right = 307.0
margin_bottom = 159.0
custom_fonts/font = ExtResource( 8 )
text = "You win"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="Victory" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )

[node name="Lose" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="Boop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )

[node name="Ouch" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
[connection signal="game_start" from="." to="Camera2D" method="_on_Game_game_start"]
[connection signal="game_start" from="." to="Ball" method="_on_Game_game_start"]
[connection signal="hit" from="." to="Camera2D" method="_on_Game_hit"]
[connection signal="hit" from="." to="Blocks" method="_on_Game_hit"]
[connection signal="victory" from="Blocks" to="." method="_on_Blocks_victory"]
[connection signal="body_shape_entered" from="Ball" to="." method="_on_Ball_body_shape_entered"]
[connection signal="body_entered" from="Death" to="." method="_on_Death_body_entered"]
